# sollotto-backend

./: .env  .gitignore  README.md  Search.code-search  appspec.yml  config.js  dyno.js  index.js  package-lock.json  package.json
.github/workflows/: dev-carlos.yaml  dev-carlosyaml  dev.yaml  main.yaml
Routes/: ImageUploadCharity.js  ImageUploadLaunchPad.js  imageUploadPool.js  imageUploadRaffle.js
models/: AdminUser.js  Charity.js  Drawing.js  LaunchPad.js  Lottery.js  Model4.js  Nft.js  Pool.js  Raffle.js  Ticket.js  User.js  charity.js  lottery.js  pool.js  ticket.js  user.js
on-chain/: .gitignore  Cargo.toml
on-chain/model-1/: Cargo.toml  README.md
on-chain/model-1/src/: instruction.rs  processor.rs
on-chain/model-1/tests/: functional.rs
on-chain/model-2/: Cargo.toml
on-chain/model-2/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
on-chain/model-2/tests/: functional.rs
on-chain/model-3/: Cargo.toml
on-chain/model-3/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs
on-chain/model-3/tests/: functional.rs
on-chain/model-4/: Cargo.toml
on-chain/model-4/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
on-chain/model-4/tests/: functional.rs
on-chain/model-5/: Cargo.toml
on-chain/model-5/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
on-chain/model-5/tests/: functional.rs
on-chain/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
on-chain/tests/: functional.rs  integration.rs
resolvers/: Charity.js  Drawing.js  LaunchPad.js  Lottery.js  Model4.js  Nft.js  Pool.js  Raffle.js  Ticket.js  User.js  adminUsers.js  charity.js  drawing.js  index.js  lottery.js  pool.js  ticket.js  user.js  utils.js
scripts/: application_start.sh  application_stop.sh  before_install.sh  install_app_dependencies.sh  start_server.sh
typedefs/: adminUser.js  charity.js  drawing.js  index.js  launchpad.js  lottery.js  model4.js  nft.js  pool.js  raffle.js  root.js  ticket.js  user.js
utils/: LotteryDataBorsh.js  TicketDataBorsh.js  alterLottery.js  auth.js  changeDraw.js  checkWindowStatus.js  chooseLottery.js  helpers.js  initLottery.js  lotteryDraw.js  resetDB.js
utils/draw-mutations/: closeDraw.js  openDraw.js  selectWinnerCharity.js
utils/on-chain-instructions/: initLottery.js  (+2 more)
(+3 files in other folders)
