[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "1.6.8"
byteorder = "1.3"
arrayref = "0.3.6"
bs58 = "0.4.0"
thiserror = "1.0.24"


[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.8"
solana-sdk = "1.6.8"
solana-validator = "1.6.8"

[lib]
crate-type = ["cdylib", "lib"]
