[package]
name = "sollotto-model-2"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
thiserror = "1.0.24"
solana-program = "=1.6.9"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "=1.6.9"
solana-sdk = "=1.6.9"
solana-validator = "1.6.8"

[lib]
name = "sollotto_model_2"
crate-type = ["cdylib", "lib"]
