[package]
name = "sollotto-model-3"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
thiserror = "1.0.24"
solana-program = "=1.6.9"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "=1.6.9"
solana-sdk = "=1.6.9"

[lib]
name = "sollotto_model_3"
crate-type = ["cdylib", "lib"]
